[package]
name = "sosu-seisei-main2"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
wgpu = "23"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
rayon = "1.10"
bitvec = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
env_logger = "0.11"
log = "0.4"
egui = "0.29"
eframe = "0.29"
sysinfo = "0.32"
rfd = "0.15"
primecount = "0.2"
chrono = "0.4"
plotters = "0.3"
egui-plotter = "0.4"
